--- a/.drone.yml
+++ b/.drone.yml
@@ -1,10 +1,11 @@
+---
 kind: pipeline
 type: docker
 name: default
 
 steps:
 - name: greeting
-  image: alpine
+  image: golang:1.12
   commands:
-  - echo hello
-  - echo world
+  - go build
+  - go test
